--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-preview": "^1.1.3",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
